src/components/Nav/Nav.css
.nav {
    position: fixed;
    top: 0;
    width: 100%;
    padding: 20px;
    height: 30px;
    z-index: 1;

    /* Animations */
    transition-timing-function: ease-in;
    transition: all 0.5s;

    /* background-color: #060b26;
    height: 80px;
    display: flex;
    justify-content: start;
    align-items: center; */
  }

  .nav__black {
    background-color: #111;
}

.nav__logo {
    position: fixed;
    left: 20px;
    width: 80px;
    object-fit: contain;
}

.nav__avatar {
    position: fixed;
    right: 20px;
    width: 30px;
    object-fit: contain;
}
  
  .sidebar__open {
    /* margin-left: 2rem; */
    font-size: 2rem;
    background: none;
  }
  
  .sidebar__menu {
    background-color: #111;
    width: 250px;
    height: 100vh;
    display: flex;
    justify-content: center;
    position: fixed;
    top: 0;
    left: -100%;
    transition: 850ms;
  }
  
  .sidebar__menu.active {
    left: 0;
    transition: 350ms;
  }

  .sidebar__menuItems {
    padding-top: 60px;
    width: 100%;
  }
  
  .sidebar__text {
    display: flex;
    justify-content: start;
    align-items: center;
    padding-left: 16px;
    list-style: none;
    height: 60px;
  }
  
  .sidebar__text a {
    text-decoration: none;
    color: #f5f5f5;
    font-size: 18px;
    width: 95%;
    height: 80%;
    display: flex;
    align-items: center;
    padding: 0 16px;
    /* border-radius: 4px; */
  }
  
  .sidebar__text a:hover {
    color: #1a83ff;
    border-right: 5px solid #1a83ff;
  }
  
  
  /* .sidebar__toggle {
    background-color: #060b26;
    width: 100%;
    height: 80px;
    display: flex;
    justify-content: start;
    align-items: center;
  } */
  
  span {
    margin-left: 16px;
  }

